--- a/index.html
+++ b/index.html
@@ -1,9 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
   <meta charset="UTF-8">
   <title>Ben Ferrer – Portrait Artist</title>
+  <meta name="description" content="Ben Ferrer is a portrait artist specializing in lifelike pencil drawings. View his portfolio and commission your own custom portrait.">
+  <meta name="keywords" content="Ben Ferrer, portrait artist, pencil portraits, custom portrait, pencil drawing, fine art">
+  <meta name="author" content="Ben Ferrer">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta property="og:title" content="Ben Ferrer – Portrait Artist">
+  <meta property="og:description" content="View the portfolio of Ben Ferrer, a portrait artist creating stunning pencil portraits.">
+  <meta property="og:image" content="https://ben-portraits.github.io/benferrer/images/Cori-portrait-ben-ferrer.png">
+  <meta property="og:url" content="https://ben-portraits.github.io/benferrer/">
+  <meta property="og:type" content="website">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Ben Ferrer – Portrait Artist">
+  <meta name="twitter:description" content="Stunning hand-drawn portraits by Ben Ferrer. Commission yours today.">
+  <meta name="twitter:image" content="https://ben-portraits.github.io/benferrer/images/Cori-portrait-ben-ferrer.png">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -12,7 +25,7 @@
     <h2>Portrait Artist</h2>
     <img src="images/ferrer signature.png" alt="Ben Ferrer Signature" class="signature">
   </header>
-  
+
   <section class="gallery">
     <img src="images/ted2-portrait-ben-ferrer.jpg" alt="Portrait of Ted">
     <img src="images/sandy2-portrait-ben-ferrer.jpg" alt="Portrait of Sandy">
@@ -36,4 +49,3 @@
   </footer>
 </body>
 </html>
-
