--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <title>Ben Ferrer – Portrait Artist</title>
+  <p>
+  <a href="https://www.instagram.com/thebenferrer" target="_blank" style="text-decoration: none; color: inherit;">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram logo" style="width:20px; vertical-align: middle; margin-right: 6px;">
+    @thebenferrer
+  </a>
+</p>
+
   <meta name="description" content="Ben Ferrer is a portrait artist specializing in lifelike pencil drawings. View his portfolio and commission your own custom portrait.">
   <meta name="keywords" content="Ben Ferrer, portrait artist, pencil portraits, custom portrait, pencil drawing, fine art">
   <meta name="author" content="Ben Ferrer">
