--- a/index.html
+++ b/index.html
@@ -23,14 +23,15 @@
   <header>
     <h1>Ben Ferrer</h1>
     <h2>Portrait Artist</h2>
-<p>
-  <a href="https://www.instagram.com/thebenferrer" target="_blank" style="text-decoration: none; color: inherit;">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram logo" style="width:20px; vertical-align: middle; margin-right: 6px;">
-    @thebenferrer
-  </a>
-</p>
+    <p style="margin-top: -10px;">
+      <a href="https://www.instagram.com/thebenferrer" target="_blank" style="text-decoration: none; color: inherit;">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram logo" style="width:20px; vertical-align: middle; margin-right: 6px;">
+        @thebenferrer
+      </a>
+    </p>
     <img src="images/ferrer signature.png" alt="Ben Ferrer Signature" class="signature">
   </header>
+
 
   <section class="gallery">
     <img src="images/ted2-portrait-ben-ferrer.jpg" alt="Portrait of Ted">
